--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
           <button class="btn" type="submit" style="border:none;cursor:pointer">Enviar mensaje</button>
         </form>
 
-        <p class="muted" style="margin-top:12px">O escribe directamente a <strong>contacto@tu-dominio.com</strong></p>
+        <p class="muted" style="margin-top:12px">O escribe directamente a <strong>brainstorming-plus@zohomail.com</strong></p>
       </aside>
     </div>
 
